@@ -8,7 +8,6 @@ import com.hryoichi.amateras.Entities.Simulators;
 import com.hryoichi.amateras.Events.AlgorithmCheck;
 import com.hryoichi.amateras.Models.AlgorithmResult;
 import com.hryoichi.amateras.Repositories.PositionsRepository;
-import com.hryoichi.amateras.Repositories.RatesRepository;
 import com.hryoichi.amateras.Repositories.RunningAlgorithmsRepository;
 import com.hryoichi.amateras.Repositories.SimulatorsRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -35,11 +34,10 @@ public class AlgorithmManageService {
     @EventListener
     @Async
     public void onRateUpdated(AlgorithmCheck event){
-        final var res = event.check();
         // TODO: Repositoryを直接叩かずServiceを利用する
         List<Simulators> runningSimulatorList = simulatorsRepository.getRunningSimulators();
         runningSimulatorList.forEach(simulator ->{
-            List<Integer> subscribedAlgorithmIdList = runningAlgorithmsRepository.getSubscribedAlgorithmsBySimulatorId(simulator.getId()).stream().map(sim -> sim.getId()).collect(Collectors.toList());
+            List<Integer> subscribedAlgorithmIdList = runningAlgorithmsRepository.getSubscribedAlgorithmsBySimulatorId(simulator.getId()).stream().map(RunningAlgorithms::getId).toList();
             subscribedAlgorithmIdList.forEach(algorithmId ->{
                 AbstractAlgorithm algorithm = getAlgorithmById(algorithmId);
                 if(Objects.isNull(algorithm))return;
@@ -64,23 +62,15 @@ public class AlgorithmManageService {
     }
 
     private AbstractAlgorithm getAlgorithmById(int algorithmId){
-        switch (algorithmId){
-            case SampleAlgorithm.ID:
-                return new SampleAlgorithm();
-            case 1:
-                return sampleAlgorithm;
-            case 2:
-                return sampleAlgorithm;
-            case 3:
-                return sampleAlgorithm;
-            case 4:
-                return sampleAlgorithm;
-            case 5:
-                return sampleAlgorithm;
-            case 6:
-                return sampleAlgorithm;
-            default:
-                return null;
-        }
+        return switch (algorithmId) {
+            case SampleAlgorithm.ID -> new SampleAlgorithm();
+            case 1 -> sampleAlgorithm;
+            case 2 -> sampleAlgorithm;
+            case 3 -> sampleAlgorithm;
+            case 4 -> sampleAlgorithm;
+            case 5 -> sampleAlgorithm;
+            case 6 -> sampleAlgorithm;
+            default -> null;
+        };
     }
 }
